start with mysql database

--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     // https://mvnrepository.com/artifact/io.ktor/ktor-gson
     implementation group: 'io.ktor', name: 'ktor-gson', version: ktor_version
 
+    // database
+    implementation 'mysql:mysql-connector-java:8.0.11'
+    implementation "org.ktorm:ktorm-core:3.2.0"
+    implementation "org.ktorm:ktorm-support-mysql:3.2.0"
+
 }
