--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 
-    // https://mvnrepository.com/artifact/io.ktor/ktor-gson
     implementation group: 'io.ktor', name: 'ktor-gson', version: ktor_version
+    implementation group: 'io.ktor', name: 'ktor-auth', version: ktor_version
+    implementation group: 'io.ktor', name: 'ktor-auth-jwt', version: ktor_version
+
 
     // database
     implementation 'mysql:mysql-connector-java:8.0.11'
